Adding Service Worker for PWA support

--- a/src/mama-menu-expose/mama-menu-expose.component.scss
+++ b/src/mama-menu-expose/mama-menu-expose.component.scss
@@ -60,7 +60,8 @@ $mama-menu-expose-when: 1024px !default;
   ion-nav {
     > .ion-page {
       left: $menu-width;
-      padding-right: $menu-width;
+      right: 0;
+      width: auto;
 
       > ion-header {
         position: relative;
