--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -26,7 +26,7 @@ $colors: (
   primary:    #387ef5,
   secondary:  #32db64,
   danger:     #f53d3d,
-  light:      #f4f4f4,
+  light: #d0d0d0,
   dark:       #222
 );
 
